--- a/android/res/values-sk/strings.xml
+++ b/android/res/values-sk/strings.xml
@@ -78,6 +78,23 @@
 
 
 
+
+<string-array name="pref_sort_types">
+<item>Combined ordering</item>
+<item>Number of seeders/leechers</item>
+</string-array>
+
+<string-array name="pref_uirefresh_types">
+<item>No automatic refresh</item>
+<item>2 seconds</item>
+<item>5 seconds</item>
+<item>15 seconds</item>
+<item>1 minute</item>
+<item>5 minutes</item>
+<item>15 minutes</item>
+<item>1 hour</item>
+</string-array>
+
 <string-array name="pref_alarminterval_types">
 <item>1 minuta</item>
 <item>10 minút</item>
