--- a/lite/res/values/strings.xml
+++ b/lite/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-	<string name="app_name" translatable="false">Transdroid Lite</string>
+	<string name="app_name" translatable="false">Transdroid</string>
 	
 	<string name="action_add">Add</string>
 	<string name="action_addfromfile">From file</string>
@@ -21,7 +21,6 @@
 	<string name="action_sort_ratio">Ratio</string>
 	<string name="action_filter">Filter list</string>
 	<string name="action_settings">Settings</string>
-	
 	<string name="action_start">Start</string>
 	<string name="action_stop">Stop</string>
 	<string name="action_resume">Resume</string>
@@ -41,7 +40,143 @@
 	<string name="navigation_servers">SERVERS</string>
 	<string name="navigation_status">STATUS</string>
 	<string name="navigation_labels">LABELS</string>
+	<string name="navigation_status_showall">All</string>
+	<string name="navigation_status_onlydown">Downloading</string>
+	<string name="navigation_status_onlyup">Uploading</string>
+	<string name="navigation_status_onlyactive">Active</string>
+	<string name="navigation_status_onlyinactive">Inactive</string>
 	<string name="navigation_emptytorrents">Connected, but no torrent are active on the server</string>
 	<string name="navigation_emptydetails">Select a torrent to view its details</string>
 	
+	<string name="pref_servers">Servers</string>
+	<string name="pref_addserver">Add new server</string>
+	<string name="pref_searchsites">Search sites</string>
+	<string name="pref_setsearchsite">Set default site</string>
+	<string name="pref_addwebsearch">Add web search site</string>
+	<string name="pref_rssfeeds">RSS feeds</string>
+	<string name="pref_addrssfeed">Add RSS feed</string>
+	<string name="pref_others">Other settings</string>
+	
+	<string name="pref_name">Name</string>
+	<string name="pref_name_optional">Optional personal name</string>
+	<string name="pref_searchurl">Direct search URL</string>
+	<string name="pref_searchurl_info">%s will be replaced by the search query</string>
+	<string name="pref_feedurl">Feed URL</string>
+	<string name="pref_reqauth">Requires authentication</string>
+	<string name="pref_reqauth_info">Opens links in the webbrowser for user login</string>
+	
+	<string name="pref_servertype">Server type</string>
+	<string name="pref_address">IP or host name</string>
+	<string name="pref_port">Port number</string>
+	<string name="pref_user">User name</string>
+	<string name="pref_pass">Password</string>
+	<string name="pref_extrapass">Deluge web password</string>
+	<string name="pref_advanced">Advanced settings</string>
+	<string name="pref_localaddress">Local IP or host</string>
+	<string name="pref_localaddress_info">When connected to the specified local network</string>
+	<string name="pref_localnetwork">Local network</string>
+	<string name="pref_localnetwork_info">The server\'s local (wifi) network</string>
+	<string name="pref_folder">Folder</string>
+	<string name="pref_folder_info">Usually empty</string>
+	<string name="pref_scgifolder">SCGI mount point</string>
+	<string name="pref_optional">Optional settings</string>
+	<string name="pref_alarmdone">Finished notification</string>
+	<string name="pref_alarmdone_info">Notify when a torrent finishes</string>
+	<string name="pref_alarmnew">New torrent notification</string>
+	<string name="pref_alarmnew_info">Nofity when a torrent was added</string>
+	<string name="pref_os">Server OS</string>
+	<string name="pref_downdir">Download directory</string>
+	<string name="pref_downdir_info">Manually set absolute path for remote connections</string>
+	<string name="pref_timeout">Connection timeout</string>
+	<string name="pref_timeout_info">Number of seconds before a connection attempt is aborted</string>
+	<string name="pref_ftpurl">Base (S)FTP url</string>
+	<string name="pref_ftpurl_into">For example ftp://me@server/downloads/</string>
+	<string name="pref_ftppass">(S)FTP password</string>
+	<string name="pref_sslenable">Use SSL</string>
+	<string name="pref_sslenable_info">Connect using https</string>
+	<string name="pref_sslkey">Custom SSL thumbprint (SHA-1)</string>
+	<string name="pref_sslkey_info">Permit only connections to this specific certificate</string>
+	<string name="pref_sslacceptall">Accept all SSL certificates</string>
+	<string name="pref_sslacceptall_info">Allow all connections from any thumbprint</string>
+	
+	<string name="pref_background">Background notifications</string>
+	<string name="pref_notifications">Enable notifications</string>
+	<string name="pref_notifications_info">Enables the background service</string>
+	<string name="pref_notifyinterval">Interval</string>
+	<string name="pref_notifyinterval_info">How often to check the server</string>
+	<string name="pref_notifysound">Sound</string>
+	<string name="pref_notifyvibrate">Vibrate</string>
+	<string name="pref_notifyled">LED colour</string>
+	<string name="pref_notifyled_info">If supported by your device</string>
+	<string name="pref_awdnotify">Support AWD notifications</string>
+	<string name="pref_awdnotify_info">Show torrent counter in ADW Launcher</string>
+	
+	<string name="pref_system">About Transdroid</string>
+	<string name="pref_checkupdates">Check for updates</string>
+	<string name="pref_checkupdates_info">Check transdroidorg for latest app version</string>
+	<string name="pref_import">Import settings</string>
+	<string name="pref_export">Export settings</string>
+	<string name="pref_sendlog">Send error log</string>
+	<string name="pref_sendlog_info">Get support or report a bug</string>
+	<string name="pref_about">About</string>
+	
+    <string-array name="pref_daemon_types" translatable="false">
+        <item>BitComet</item>
+        <item>Bitflu 1.2+</item>
+        <item>BitTorrent 6+</item>
+        <item>Buffalo NAS -1.31</item>
+        <item>Deluge 1.2+</item>
+        <item>DLink Router BT</item>
+        <item>Ktorrent</item>
+        <item>qBittorrent</item>
+        <item>rTorrent</item>
+        <item>Torrentflux-b4rt</item>
+        <item>Transmission</item>
+        <item>µTorrent</item>
+        <item>Vuze</item>
+    </string-array>
+    <string-array name="pref_daemon_values" translatable="false">
+        <item>daemon_bitcomet</item>
+        <item>daemon_bitflu</item>
+        <item>daemon_bittorrent</item>
+        <item>daemon_buffalonas</item>
+        <item>daemon_deluge</item>
+        <item>daemon_dlinkrouterbt</item>
+        <item>daemon_ktorrent</item>
+        <item>daemon_qbittorrent</item>
+        <item>daemon_rtorrent</item>
+        <item>daemon_tfb4rt</item>
+        <item>daemon_transmission</item>
+        <item>daemon_utorrent</item>
+        <item>daemon_vuze</item>
+    </string-array>
+	<string-array name="pref_os_types" translatable="false">
+		<item>Windows</item>
+		<item>Mac</item>
+		<item>Linux</item>
+	</string-array>
+	<string-array name="pref_os_values" translatable="false">
+		<item>type_windows</item>
+		<item>type_mac</item>
+		<item>type_linux</item>
+	</string-array>
+	<string-array name="pref_notifyinterval_types">
+		<item>1 minute</item>
+		<item>10 minutes</item>
+		<item>30 minutes</item>
+		<item>1 hour</item>
+		<item>3 hours</item>
+		<item>12 hours</item>
+		<item>1 day</item>
+	</string-array>
+	<string-array name="pref_notifyinterval_values" translatable="false">
+		<item>60</item>
+		<item>600</item>
+		<item>1800</item>
+		<item>3600</item>
+		<item>10800</item>
+		<item>43200</item>
+		<item>86400</item>
+	</string-array>
+
 </resources>
